# syncmesh

./: .gitignore  Cargo.toml  GETTING_STARTED.md  PLAN.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  dev-release.yml  release.yml
crates/syncmesh-core/: Cargo.toml
crates/syncmesh-core/src/: conflict.rs  drift.rs  lib.rs  media.rs  node_id.rs  protocol.rs  ready.rs  rtt.rs  snapshot.rs  state.rs  time.rs
crates/syncmesh-core/tests/: conflict_proptest.rs  mesh_simulator.rs
crates/syncmesh-net/: Cargo.toml
crates/syncmesh-net/src/: framing.rs  identity.rs  lib.rs  mesh.rs  peer.rs  ticket.rs
crates/syncmesh-net/tests/: loopback.rs
crates/syncmesh-player/: Cargo.toml
crates/syncmesh-player/examples/: debug_spawn.rs
crates/syncmesh-player/src/: command.rs  error.rs  event.rs  ipc.rs  lib.rs  process.rs  transport.rs
crates/syncmesh-player/tests/: real_mpv.rs
packaging/: SETUP.md
packaging/homebrew/: syncmesh.rb
scripts/: syncmesh.lua
