[package]
name = "syncmesh-core"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Protocol, state machine, and sync algorithms for syncmesh. Pure logic, zero I/O."

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "1"
