[package]
name = "syncmesh-net"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "iroh mesh transport for syncmesh."

[lints]
workspace = true

[dependencies]
syncmesh-core = { path = "../syncmesh-core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
iroh = { version = "0.98", default-features = false, features = ["tls-ring"] }
iroh-base = { version = "0.98", default-features = false, features = ["key"] }
data-encoding = "2"
bytes = "1"

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tempfile = "3"
