[package]
name = "syncmesh-player"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "mpv IPC client wrapper for syncmesh."

[lints]
workspace = true

[dependencies]
syncmesh-core = { path = "../syncmesh-core" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
